# RaylibMagmaEngine

./: .gitmodules  CMakeLists.txt  README.md  build.ps1
src/: CMakeLists.txt  array.c  array.cpp  array.h  assets.c  assets.cpp  assets.h  common.h  engine.h  entity.c  entity.cpp  entity.h  list.c  list.cpp  list.h  logger.cpp  logger.h  magma.cpp  magma.h  main_menu.c  main_menu.cpp  main_menu.h  math_custom.h  memory.c  memory.h  player_fps.c  player_fps.cpp  player_fps.h  window.c  window.cpp  window.h
tester/: CMakeLists.txt
tester/src/: main.cpp
